# ModelCypher

./: .gitignore  .kiroignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_TRACKING.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  KnowledgeasHighDimensionalGeometryInLLMs.md  LICENSE  ModelCypher.code-workspace  PARITY_INVENTORY.md  README.md  audit_lines.py  fix_numpy_tests.py  pyproject.toml  run_verification_tests.py  todo.md  verify_mlx_freeze.py  verify_port.py
.gemini/: GEMINI.md
.kiro/specs/cli-mcp-parity/: ModelCypher.code-workspace  audit-report.md  design.md  requirements.md  tasks.md
docs/: AI-ASSISTANT-GUIDE.md  ARCHITECTURE.md  BACKEND-COMPARISON.md  BACKEND-PARITY.md  CLI-REFERENCE.md  FAQ.md  GEOMETRY-GUIDE.md  GLOSSARY.md  HEXAGONAL-AUDIT-REPORT.md  INTEGRATION_ARCHITECTURE.md  MATH-PRIMER.md  MCP-CONFIGURATION.md  MCP.md  PARITY.md  PROFILING.md  README.md  REQUIRED_FIXES.md  START-HERE.md  VERIFICATION.md  WHY-GEOMETRY-MATTERS.md  getting_started.md  security.md
docs/geometry/: gromov_wasserstein.md  intersection_maps.md  manifold_stitching.md  mental_model.md  parameter_geometry.md  topological_fingerprints.md
docs/references/: BIBLIOGRAPHY.md  download_arxiv.sh
docs/research/: ARXIV_STYLE_GUIDE.md  KnowledgeasHighDimensionalGeometryInLLMs.md  cross_lora_transfer.md  dimensional_hierarchy.md  entropy_differential_safety.md  falsification_experiments.md  geometric_zipper_propagation.md  interference_prediction.md  linguistic_thermodynamics.md  manifold_swapping.md  merge_algorithm_synthesis.md  moral_geometry.md  semantic_primes.md  social_geometry.md  spatial_grounding.md  temporal_topology.md
docs/research/eval_suites/: README.md
docs/research/experimental/: manifold_coverage_derivation.md
docs/research/math/: MATH_REFERENCE_INDEX.md  centered_kernel_alignment.md  dare_sparsity.md  dora_decomposition.md  fisher_information.md  frechet_mean.md  geodesic_distance.md  gromov_wasserstein.md  hsic.md  intrinsic_dimension.md  manifold_curvature.md  permutation_alignment.md  persistent_homology.md  procrustes_analysis.md  relative_representations.md  slerp.md  spectral_analysis.md  tangent_space.md  task_singular_vectors.md  ties_merge.md
examples/: 01_basic_geometry_probe.py  02_safety_audit.py  03_adapter_blending.py  04_entropy_analysis.py  05_model_merge.py  README.md
experiments/: README.md
experiments/operational-semantics-hypothesis/: EXPERIMENT_LOG.md  HYPOTHESIS.md  README.md
experiments/operational-semantics-hypothesis/analysis/: arithmetic_directions.py  cross_model_geodesic.py  cross_model_invariance.py  fast_pythagorean.py  formula_as_geometry.py  pythagorean_probe.py  riemannian_pythagorean.py  riemannian_pythagorean_v2.py
experiments/operational-semantics-hypothesis/raw_output/: cli_geometry_help.txt  run1_llama3b_qwen3b.txt  run1_mistral7b_qwen8b.txt  run1_qwen05b_qwen8b.txt  run2_probe_llama3b.txt  run3_logic_llama3b_qwen3b.txt  run3_math_llama3b_qwen3b.txt  run3_math_qwen05b_qwen8b.txt
experiments/operational-semantics-hypothesis/results/: SUMMARY.md  SUMMARY_RIEMANNIAN.md  arithmetic_Llama-3.2-3B-Instruct-4bit.json  cross_model.json  cross_model_geodesic.json  fast_Llama-3.2-3B-Instruct-4bit.json  fast_Mistral-7B-Instruct-v0.3-4bit.json  fast_Qwen2.5-3B-Instruct-bf16.json  fast_Qwen3-8B-4bit.json  formula_geometry.json  llama_3b.json  mistral_7b.json  qwen3_8b.json  qwen_coder_7b.json  riemannian_v2_Llama-3.2-3B-Instruct-4bit.json  riemannian_v2_Mistral-7B-Instruct-v0.3-4bit.json  riemannian_v2_Qwen2.5-0.5B-Instruct-bf16.json  riemannian_v2_Qwen2.5-3B-Instruct-bf16.json  riemannian_v2_Qwen3-8B-4bit.json
papers/: NEGATIVE-RESULTS.md  README.md  SUMMARIES.md  TEST_DATA_REQUIREMENTS.md  paper-0-the-shape-of-knowledge.md  paper-1-invariant-semantic-structure.md  paper-1-manifold-hypothesis-of-agency.md  paper-2-entropy-safety-signal.md  paper-2-linguistic-thermodynamics.md  paper-3-cross-architecture-transfer.md  paper-3-unified-manifold-alignment.md  paper-4-modelcypher-toolkit.md  paper-5-semantic-highway.md
plans/: README.md  comprehensive_audit_plan.md  comprehensive_audit_report_structure.md
scripts/: audit_lines.py  benchmark_computation_cache.py  extract_reference_data.py  extract_trainingcypher_data.py  generate_paper1_data.py  modernize_typing.py  run_validation_suite.py  run_verification_tests.py  test_merge_with_caching.py  verify_mlx_freeze.py
src/modelcypher/: __init__.py  main.py
src/modelcypher/adapters/: __init__.py  asif_packager.py  embedding_defaults.py  embedding_http.py  embedding_mlx.py  filesystem_storage.py  hf_hub.py  hf_model_search.py  local_exporter.py  local_inference.py  local_manifold_profile_store.py  local_training.py  (+3 more)
tests/: __init__.py  conftest.py  test_adapter_merge_properties.py  test_advanced_geometry.py  test_affine_stitching_layer.py  test_agent_trace.py  test_backend_matrix_utils.py  test_baseline_cli_mcp.py  test_behavioral_outcome_classifier.py  test_behavioral_probes.py  test_benchmark_runner.py  test_capability_guard.py  test_checkpoints.py  test_circuit_breaker.py  test_cka_multi_backend.py  test_cka_properties.py  test_cka_rbf.py  test_cli.py  test_cli_integration.py  test_completions_properties.py  test_compositional_probes.py  test_computation_cache.py  test_computational_gate_atlas.py  test_concept_response_matrix.py  test_concept_response_matrix_service.py  test_conflict_score.py  test_cross_architecture_layer_matcher.py  test_cross_cultural_geometry.py  test_cross_grounding_transfer.py  test_cuda_backend.py  test_dare_sparsity.py  test_dataset_editor.py  test_dataset_validation.py  test_delta_feature_extractor.py  test_differential_entropy_detector.py  test_dimension_blender.py  test_divergence_intervention_monitor.py  test_domain_geometry_validation.py  test_dual_path_ranking.py  test_embedding_bridge.py  (+133 more)
tests/integration/: __init__.py  test_entropy_workflow.py  test_merge_bug_fixes.py  test_merge_pipeline.py  test_merge_quality_metrics.py
tests/mcp/: test_parity_verification.py  test_phase2_tools.py
(+545 files in other folders)
