[tool.poetry]
name = "modelcypher"
version = "0.1.0"
description = "ModelCypher core engines, CLI, and MCP tools for model training and analysis"
authors = ["ModelCypher Team"]
readme = "README.md"
packages = [{ include = "modelcypher", from = "src" }]
include = [
  { path = "src/modelcypher/data/*.json", format = "sdist" },
  { path = "src/modelcypher/data/*.json", format = "wheel" },
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
PyYAML = "^6.0.2"
mcp = "^1.0.0"
huggingface-hub = "^0.34.0"
mlx = { version = "^0.30.1", markers = "platform_system == 'Darwin'" }
mlx-lm = { version = "^0.28.4", markers = "platform_system == 'Darwin'" }
numpy = "^1.26.4"
scipy = "^1.14.0"
psutil = "^5.9.8"
safetensors = "^0.4.3"
tokenizers = "^0.22.0"
mlx-embeddings = { version = "^0.0.5", optional = true }

pypdf = { version = "^4.3.1", optional = true }
python-docx = { version = "^1.1.2", optional = true }
beautifulsoup4 = { version = "^4.12.3", optional = true }
openpyxl = { version = "^3.1.5", optional = true }
python-pptx = { version = "^0.6.23", optional = true }
torch = { version = "^2.4.1", optional = true }

[tool.poetry.extras]
docs = ["pypdf", "python-docx", "beautifulsoup4", "openpyxl", "python-pptx"]
cuda = ["torch"]
embeddings = ["mlx-embeddings"]

[tool.poetry.scripts]
mc = "modelcypher.cli.app:app"
modelcypher = "modelcypher.cli.app:app"
modelcypher-mcp = "modelcypher.mcp.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.24.0"
hypothesis = "^6.148.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
