[tool.poetry]
name = "modelcypher"
version = "1.0.0"
description = "ModelCypher core engines, CLI, and MCP tools for model training and analysis"
authors = ["ModelCypher Team"]
readme = "README.md"
license = "AGPL-3.0-only"
homepage = "https://github.com/EthyrosAI/ModelCypher"
repository = "https://github.com/EthyrosAI/ModelCypher"
keywords = ["llm", "machine-learning", "model-merging", "geometry", "manifold", "mlx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
packages = [{ include = "modelcypher", from = "src" }]
include = [
  { path = "src/modelcypher/data/*.json", format = "sdist" },
  { path = "src/modelcypher/data/*.json", format = "wheel" },
]

[tool.poetry.urls]
Documentation = "https://github.com/EthyrosAI/ModelCypher#readme"
Changelog = "https://github.com/EthyrosAI/ModelCypher/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/EthyrosAI/ModelCypher/issues"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
PyYAML = "^6.0.2"
mcp = "^1.0.0"
huggingface-hub = "^0.34.0"
mlx = { version = "^0.30.1", markers = "platform_system == 'Darwin'" }
mlx-lm = { version = "^0.28.4", markers = "platform_system == 'Darwin'" }
numpy = "^1.26.4"
scipy = "^1.14.0"
psutil = "^5.9.8"
safetensors = "^0.4.3"
tokenizers = "^0.22.0"
mlx-embeddings = { version = "^0.0.5", optional = true }

pypdf = { version = "^4.3.1", optional = true }
python-docx = { version = "^1.1.2", optional = true }
beautifulsoup4 = { version = "^4.12.3", optional = true }
openpyxl = { version = "^3.1.5", optional = true }
python-pptx = { version = "^0.6.23", optional = true }
torch = { version = "^2.4.1", optional = true }
jax = { version = ">=0.4.30", optional = true }
jaxlib = { version = ">=0.4.30", optional = true }
scikit-learn = "^1.8.0"

[tool.poetry.extras]
docs = ["pypdf", "python-docx", "beautifulsoup4", "openpyxl", "python-pptx"]
cuda = ["torch"]
jax = ["jax", "jaxlib"]
embeddings = ["mlx-embeddings"]

[tool.poetry.scripts]
mc = "modelcypher.cli.app:app"
modelcypher = "modelcypher.cli.app:app"
modelcypher-mcp = "modelcypher.mcp.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.24.0"
hypothesis = "^6.148.7"
pytest-xdist = "^3.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Use -n 4 manually for parallel: poetry run pytest -n 4
markers = [
    "unit: Pure unit tests with no external dependencies",
    "integration: Tests that load models, use MCP, or touch filesystem",
    "slow: Tests that take more than 1 second",
    "mlx: Tests that require MLX hardware (Apple Silicon)",
    "property: Hypothesis property-based tests",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
